# fungi_fortress

./: .gitignore  README.md  SETUP_LLM.md  __init__.py  characters.py  config_manager.py  constants.py  entities.py  events.py  game_logic.py  game_state.py  input_handler.py  interactions.py  inventory.py  llm_config.ini.example  llm_interface.py  lore.py  magic.py  main.py  map_generation.py  missions.py  oracle_config.ini.example  oracle_config.ini~  oracle_logic.py  player.py  pyproject.toml  renderer.py  requirements.txt  task_manager.py  text_streaming.py  tiles.py  utils.py  verify_llm_setup.py
tests/: test_config_manager.py  test_game_logic.py  test_game_oracle_streaming_integration.py  test_game_state.py  test_integration_game.py  test_integration_xai_direct.py  test_inventory.py  test_llm_integration.py  test_llm_interface.py  test_llm_oracle_streaming.py  test_magic.py  test_map_generation.py  test_oracle_dialogue.py  test_oracle_logic.py  test_placeholder.py  test_player.py  test_security.py  test_text_streaming.py  test_tiles.py  test_utils.py
